--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ pandas
 streamlit
 scipy==1.10.1  #https://stackoverflow.com/questions/78279136/importerror-cannot-import-name-triu-from-scipy-linalg-when-importing-gens
 gensim
+annoy
+tqdm
